# stlext

./: .gitignore  CMakeLists.txt  README.md  boostrap.cmake.sh  bootstrap.qmake.sh  configure-bootstrap.cmake.sh  configure-bootstrap.qmake.sh  configure.qt.projects.sh  coverage.sh  stlext.pro  stlext.sln
.github/workflows/: ccpp.yml
benchmarks/: CMakeLists.txt  benchmarks.pro  benchmarks.vcxproj  bm_bitvector.cpp  bm_counting_sort.cpp  bm_main.cpp  bm_packed_hashtbl.cpp  bm_stringset.cpp  bootstrap.cmake.gbenchmarks.sh  bootstrap.qmake.gbenchmarks.sh  perf_unordered_set_stringset.txt  results_stringset.txt
examples/: CMakeLists.txt  bootstrap.cmake.examples.sh  bootstrap.qmake.examples.sh  examples.pro  examples.vcxproj  examples.vcxproj.filters  main.cpp  point2d.h  record.h  rt.h
examples/algorithm/: majelem_sample.h
examples/cui/: cui_samples.h
examples/iostreams/: byteview.h  codecs.h  getline.h  iomanips.h  utilities.h
stlext/: CMakeLists.txt  bootstrap.cmake.stlext.sh  bootstrap.qmake.stlext.sh  stlext.pro  stlext.vcxproj  stlext.vcxproj.filters  stlextdoc.dox
stlext/algorithm/: algorithm.h  experimental.h  searching.h  sorting.h
stlext/allocators/: aligned_allocator.hpp  allocators.hpp  arena_traits.hpp  basic_allocator.hpp  basic_arena.hpp  binexp_arena.hpp  bitmap_arena.hpp  fallback_arena.hpp  freelist.hpp  heap_arena.hpp  intrusive_ptr.hpp  memory_storage.hpp  ordered_arena.hpp  pooled_object.hpp
tests/: CMakeLists.txt  bootstrap.cmake.tests.sh  main.cpp  make.qt.gtests.sh  tests.pro  tests.vcxproj  tests.vcxproj.filters
tests/algorithm/: experimental.cpp  sorting.cpp
tests/bfc/: bloom_filter.cpp
tests/bitvector/: bitvector.cpp
tests/compability/: c++11_algo.cpp  c++14_algo.cpp  c++17_algo.cpp  c++20_algo.cpp
tests/compact/: string.cpp  vector.cpp  wstring.cpp
tests/components/: class_factory.cpp
tests/containers/: lru_cache.cpp  packed_hashtbl.cpp  span.cpp  stringset.cpp
tests/functional/: predicates.cpp
tests/iostreams/: base16.cpp  base64.cpp  binrep.cpp  getline.cpp  itos_ascii.cpp  itos_utils.cpp  itos_utils.hpp  itos_wide.cpp  ostream_joiner.cpp  ratio.cpp
tests/iterator/: iterators.cpp
tests/range/: interval.cpp
tests/tuple/: tuple_algo.cpp
(+170 files in other folders)
